--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "author": "yuxuan.jiang",
   "license": "ISC",
   "devDependencies": {
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "webpack": "^4.41.1",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2",
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
-    "babel-loader": "^8.0.6"
+    "@material-ui/core": "^4.5.1",
+    "babel-loader": "^8.0.6",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.41.1",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2"
+  },
+  "Dependencies": {
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
   }
 }
