--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "babel-loader": "^8.0.6",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "source-map-loader": "^0.2.4",
     "webpack": "^4.41.1",
     "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2"
+    "webpack-dev-server": "^3.8.2"
   }
 }
